--- a/resources/fxml/menu/AdminWindow.fxml
+++ b/resources/fxml/menu/AdminWindow.fxml
@@ -8,19 +8,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.AdminController">
+<BorderPane fx:id="borderAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.AdminController">
    <left>
       <VBox prefHeight="600.0" prefWidth="125.0" spacing="15.0" styleClass="side-menu-bar" BorderPane.alignment="CENTER_LEFT">
          <children>
-            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openEventManagementWindow" prefHeight="35.0" prefWidth="125.0" text="Home">
-               <graphic>
-                  <ImageView fitHeight="25.0" fitWidth="25.0">
-                     <image>
-                        <Image url="@../../icon/Home(white).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
             <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openEventsWindow" prefHeight="35.0" prefWidth="125.0" text="Events">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
@@ -32,6 +23,15 @@
                <VBox.margin>
                   <Insets />
                </VBox.margin>
+            </Button>
+            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openEventManagementWindow" prefHeight="35.0" prefWidth="125.0" text="Manage Events">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0">
+                     <image>
+                        <Image url="@../../icon/Home(white).png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
             <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openCalendarWindow" prefHeight="35.0" prefWidth="125.0" text="Calendar">
                <graphic>
@@ -63,7 +63,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openManageUserWindow" prefHeight="35.0" prefWidth="125.0" text="Manage User">
+            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openManageUserWindow" prefHeight="35.0" prefWidth="125.0" text="Manage Users">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
