--- a/resources/fxml/pages/ManageUserWindow.fxml
+++ b/resources/fxml/pages/ManageUserWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ManageUserController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ManageUserController">
    <children>
       <Label styleClass="window-title" text="User Management" />
       <HBox alignment="CENTER" fillHeight="false" maxHeight="500.0" minHeight="500.0" prefHeight="500.0" spacing="100.0">
@@ -19,7 +19,7 @@
               <columns>
                 <TableColumn fx:id="colFirstName" prefWidth="100.0" text="First name" />
                 <TableColumn fx:id="colLastName" prefWidth="100.0" text="Last name" />
-                  <TableColumn fx:id="colEmail" prefWidth="140.0" text="Email" />
+                  <TableColumn fx:id="colEmail" prefWidth="138.0" text="Email" />
               </columns>
             </TableView>
             <VBox alignment="CENTER_LEFT" prefWidth="200.0">
@@ -59,6 +59,9 @@
                         <Button mnemonicParsing="false" onAction="#updateUser" text="Update User" />
                         <Button mnemonicParsing="false" onAction="#deleteUser" text="Delete User" />
                      </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="25.0" prefWidth="150.0" spacing="10.0">
                      <children>
