--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,6 +22,11 @@
     -fx-background-radius: 0 0 0 10;
 }
 
+.side-menu-button {
+    -fx-background-radius: 0;
+    -fx-background-color: #4B4B4B;
+}
+
 .window-title {
     -fx-font-family: 'Anta';
     -fx-font-size: 20;
