Profile Window, Controller, CSS

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -90,3 +90,10 @@
     -fx-background-color: #4B4B4B;
 }
 
+.profilepicture{
+    -fx-background-color: #4B4B4B;
+}
+
+.profilepicture:hover{
+    -fx-background-color: transparent;
+}
