Method to get all sold tickets from db

--- a/resources/fxml/pages/ProfileWindow.fxml
+++ b/resources/fxml/pages/ProfileWindow.fxml
@@ -5,11 +5,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ProfileWindowController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ProfileWindowController">
    <children>
       <HBox alignment="CENTER" prefHeight="1.0" prefWidth="775.0">
          <children>
@@ -22,7 +23,10 @@
                <children>
                   <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#changeImage" prefHeight="125.0" prefWidth="125.0" styleClass="profilepicture">
                      <graphic>
-                        <ImageView fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" />
+                        <ImageView fitHeight="125.0" fitWidth="125.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../../icon/Profilepicture(white).png" />
+                           </image></ImageView>
                      </graphic>
                   </Button>
                   <Label text="Click image to change" />
