--- a/resources/fxml/pages/ManageUserWindow.fxml
+++ b/resources/fxml/pages/ManageUserWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ManageUserController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.ManageUserController">
    <children>
       <Label styleClass="window-title" text="User Management" />
       <HBox alignment="CENTER" fillHeight="false" maxHeight="500.0" minHeight="500.0" prefHeight="500.0" spacing="100.0">
@@ -75,6 +75,11 @@
                   <HBox alignment="CENTER" prefHeight="25.0" prefWidth="150.0" spacing="10.0">
                      <children>
                         <Button fx:id="createButton" mnemonicParsing="false" onAction="#createUser" text="Create User" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="lblAlert" textFill="#9e1f1f" />
                      </children>
                   </HBox>
                </children>
