--- a/resources/fxml/pages/StatisticsWindow.fxml
+++ b/resources/fxml/pages/StatisticsWindow.fxml
@@ -64,7 +64,7 @@
                               <Insets left="10.0" />
                            </padding>
                         </HBox>
-                        <BarChart fx:id="barTicketsSold" prefHeight="283.0" prefWidth="421.0">
+                        <BarChart fx:id="barTicketsSold" animated="false" prefHeight="283.0" prefWidth="421.0">
                           <xAxis>
                             <CategoryAxis animated="false" side="BOTTOM" />
                           </xAxis>
